[gd_scene load_steps=2 format=3 uid="uid://bie00x0ig2nw"]

[ext_resource type="Script" path="res://Areas/PlacedArea.gd" id="1_oygxq"]

[node name="PlacedArea" type="Node3D"]
script = ExtResource("1_oygxq")

[node name="Area3D" type="Area3D" parent="." groups=["placed_area"]]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]

[node name="Marker3D" type="Marker3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]

[connection signal="area_entered" from="Area3D" to="." method="_on_area_3d_area_entered"]
[connection signal="area_exited" from="Area3D" to="." method="_on_area_3d_area_exited"]
